Set up project. Added some global classes, fonts and colors. Began scaffolding

--- a/source/css/_settings.color.scss
+++ b/source/css/_settings.color.scss
@@ -4,5 +4,10 @@
  * Your color palette should sit here and always follow the same namespace:
  * `$color-`
  */
-$color-background: #ffffff;
+$color-background: #f3f3f2;
 $color-foreground: #151515;
+
+
+$mainBlue: #8dc2d5;
+$mainGrey: #e1e1e1;
+$font-color: #2d2d2d;
