--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -15,9 +15,21 @@
 	// z-index: index($bg-elements, fixed-bg);
 }
 
+.whiteStripe{
+	height: 40px;
+	background-color: white;
+	width: 100%;
+}
+.blueStripe{
+	background-color: $mainBlue;
+	height: 20px;
+	margin-top: 20px;
+	width: 100%;
+}
+
 
 .intro--container{
-	padding: 155px 20px 135px 20px;
+	padding: 135px 20px 155px 20px;
 	margin: 0 auto;
 	max-width: 600px;
 	width: 100%;
@@ -29,5 +41,32 @@
 	margin-top: 35px;
 	padding-top: 35px;
 	text-align: justify;
-
 }
+
+
+.stopthejump{
+	display: none;
+	height: 100px;
+	width: 100%;
+}
+
+
+.imageContainer{
+		height: 390px;
+		width: 100%;
+		// padding-bottom: 40px;
+
+		.leftImage{
+			background-size: cover;
+			height: 100%;
+			width: 49%;
+			float: left;
+		}
+
+		.rightImage{
+			background-size: cover;
+			height: 100%;
+			width: 49%;
+			float: right;
+		}
+	}
