--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -5,12 +5,109 @@
  */
 
 
-@include module("gallery") { 
-  // :)
-	.galleryImages{
-		background-color: red;
-		border: solid red 5px;
-		height: 2000px;
-		width: 300px;
+@include module("gallery") {
+
+	.mosaic--container{
+		border: solid 1px black;
+		margin: 0 auto;
+		margin-bottom: 75px;
+		width: 94%;
+
+		.mosaic--element{
+			border: solid 1px black;
+			display: inline-block;
+			height: 100%;
+			padding: 10px;
+		}
+
+		.mosaic--container__top{
+			border: solid 1px black;
+			display: block;
+			height: 400px;
+			// padding-bottom: 20px;
+
+			.mosaic--top__left{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 33%;
+			}
+
+			.mosaic--block{
+				display: inline-block;
+				height: 100%;
+				vertical-align: top;
+				width: 66%;
+
+				.mosaic--top__topMiddle{
+					background: url('../img/test.jpg') no-repeat;
+					background-size: cover;
+					display: inline-block;
+					height: 45%;
+					width: 45%;
+				}
+
+				.mosaic--top__topRight{
+					background: url('../img/test.jpg') no-repeat;
+					background-size: cover;
+					height: 45%;
+					display: inline-block;
+					width: 45%;
+				}
+
+
+				.mosaic--top__bottomRight{
+					background: url('../img/test.jpg') no-repeat;
+					background-size: cover;
+					display: block;
+					height: 50%;
+					width: 100%;
+					float: right;
+				}
+			}
+		}
+
+		.mosaic--container__middle{
+			height: 280px;
+			display: block;
+			border: solid 1px black;
+			// padding-bottom: 20px;
+
+			.mosaic--middle__left{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 33%;
+			}
+			.mosaic--middle__middle{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 33%;
+			}
+			.mosaic--middle__right{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 33%;
+			}
+		}
+
+		.mosaic--container__bottom{
+			height: 220px;
+			display: block;
+			border: solid 1px black;
+			// padding-bottom: 20px;
+
+			.mosaic--bottom__left{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 49%;
+			}
+
+			.mosaic--bottom__right{
+				background: url('../img/test.jpg') no-repeat;
+				background-size: cover;
+				width: 49%;
+
+			}
+		}
+
 	}
 }
