--- a/source/css/module/info.scss
+++ b/source/css/module/info.scss
@@ -6,5 +6,26 @@
 
 
 @include module("info") { 
-  // :)
+  	.imageContainer{
+		.leftImage{
+			background-image: url('../img/left-info-img.jpg');
+		}
+
+		.rightImage{
+			background-image: url('../img/right-info-img.jpg');
+		}
+	}
+
+	.floorPlanPanel{
+		background-color: $mainBlue;
+		height: 360px;
+		width: 100%;
+		text-align: center;
+		display: table;
+
+		img{
+			display: table-cell;
+			vertical-align: middle;
+		}
+	}
 }
