--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -9,6 +9,7 @@
 	background-color: $mainGrey;
 	width: 100%;
 	z-index: 2;
+	height: 100px;
 	box-shadow: 0 2px 3px rgba(0,0,0,.4);
 
 	.navbar--container{
@@ -26,10 +27,10 @@
 		}
 	}
 
-	.main-nav-sccrolled{
+	&.fixed {
 		position: fixed;
-  		width: 100%;
-  		top: 0;
-
+		top: 0;
+		height: 100px;
+		z-index: 1;
 	}
 }
