--- a/source/css/module/homescreen.scss
+++ b/source/css/module/homescreen.scss
@@ -37,8 +37,12 @@
 	}
 
 	.arrow{
+		background: url('../img/arrow.png') no-repeat;
+		background-size: 100%;
 		position: absolute;
 		bottom: 5%;
 		margin-left: -25px;
+		height: 20px;
+		width: 40px;
 	}
 }
