--- a/source/css/_settings.typography.scss
+++ b/source/css/_settings.typography.scss
@@ -55,6 +55,14 @@ h2{
 	text-transform: uppercase;
 }
 
+
+h3{
+	font-family: $header-font;
+	font-weight: normal;
+	font-size: 20px;
+	text-transform: uppercase;
+}
+
 li{
 	color: $font-color;
 	font-size: 20px;
