--- a/source/css/module/contact.scss
+++ b/source/css/module/contact.scss
@@ -6,5 +6,73 @@
 
 
 @include module("contact") { 
-  // :)
+  	.contactPanel{
+  		background-color: $mainGrey;
+  		padding: 100px 0;
+	  	// text-align: center;
+
+	  	.contactPanel--container{
+			width: 80%;
+			margin: 0 auto;
+			padding-top: 60px;
+			text-align: center;
+
+			h3{
+				padding-bottom: 50px;
+			}
+
+
+		  	.contactPanel--container__left{
+				display: inline-block;
+				width: 40%;
+				vertical-align: top;
+				text-align: center;
+				padding-left:20px;
+
+				p{
+					padding-top:10px;
+				}
+
+	  		}
+
+	  		.contactPanel--container__right{
+	  			display: inline-block;
+	  			width: 40%;
+	  			padding-left:20px;
+
+	  			h3{
+	  				text-align: left;
+	  			}
+
+				input{
+					display: block;
+					height: 40px;
+					width: 100%;
+					margin: 10px;
+					margin-left: 0px;
+					padding-left: 5px;
+					padding-top: 5px;
+					vertical-align: top;
+					font-family: $content-font;
+					font-style: italic;
+
+					&.message{
+						height: 150px;
+					}
+
+					&.submit{
+						width: 50%;
+						padding: 22px 0 32px;
+						font-family: $header-font;
+						font-style: normal;
+						background-color: $mainBlue;
+						text-transform: uppercase;
+						border:none;
+					}
+				}
+
+	  			// padding-left:20px;
+	  		}
+	  	}
+  	}
 }
