--- a/source/css/module/home.scss
+++ b/source/css/module/home.scss
@@ -40,6 +40,20 @@
 		padding: 70px;
 		text-align: center;
 
+		.emailImg{
+			background: url('../img/mailIcon.png') no-repeat 100%;
+			height: 30px;
+			width: 40px;
+			margin-left: -20px;
+			left: 50%;
+			position: absolute;
+			margin-bottom: 30px;
+		}
+
+		h2{
+			margin-top: 60px;
+		}
+
 		.email{
 			padding-top:10px;
 		}
