--- a/source/css/app.scss
+++ b/source/css/app.scss
@@ -16,6 +16,7 @@
 // Settings
 //////////////////////////////////////////////////
 @import "settings.global";
+@import "settings.mediaQuerries";
 @import "settings.color";
 @import "settings.typography";
 @import "settings.default";
