--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -12,18 +12,26 @@
 	height: 100px;
 	box-shadow: 0 2px 3px rgba(0,0,0,.4);
 
+	.burger{
+		display: none;
+	}
+
 	.navbar--container{
-		width: 85%;
-		margin: 0 auto;
 		text-align: center;
 
 		li{
 			display: inline-block;
-			width: 17%;
+			width: 10%;
 			text-align: center;
 			text-decoration: none;
-			padding: 40px 20px;
-			min-width: 200px;
+			padding: 45px 0px 25px;
+			margin: 0 20px;
+			min-width: 180px;
+			border-bottom: 10px solid $mainGrey;
+			border-bottom: 10px solid $mainBlue;
+
+			&.active{
+			}
 		}
 	}
 
@@ -33,4 +41,64 @@
 		height: 100px;
 		z-index: 1;
 	}
+
+
+
+	@media #{$viewport-tablet} {
+
+		.navbar--container{
+			li{
+				font-size: 15px;
+				min-width: 100px;
+			}
+		}
+	}
+
+	@media #{$viewport-mobile}{
+		background-color: $mainBlue;
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		height: auto;
+
+		.burger{
+			display: block;
+			position: fixed;
+			left: 10px;
+			top: 10px;
+
+			.burger--bar{
+				background-color: $mainGrey;
+				margin: 3px 0;
+				height: 4px;
+				width: 25px;
+			}
+		}
+
+
+		.navbar--container{
+			text-align: left;
+			width: 90%;
+			margin: 0 auto;
+			margin-left: 35px;
+
+			li{
+				color: $mainGrey;
+				min-width: auto;
+				width: 100%;
+				margin: 0px;
+				padding: 15px 10px;
+				text-align: left;
+				border-bottom: solid 1px $mainGrey;
+			}
+		}
+	}
 }
+
+
+
+
+
+
+
+
