--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -52,21 +52,79 @@
 
 
 .imageContainer{
-		height: 390px;
-		width: 100%;
-		// padding-bottom: 40px;
+	height: 390px;
+	width: 100%;
+	// padding-bottom: 40px;
+
+	.leftImage{
+		background-size: cover;
+		height: 100%;
+		width: 49%;
+		float: left;
+	}
+
+	.rightImage{
+		background-size: cover;
+		height: 100%;
+		width: 49%;
+		float: right;
+	}
+}
+
+
+
+
+@media #{$viewport-mobile} {
+
+	.intro--container{
+		padding-top: 50px;
+		padding-bottom: 40px;
+	}
+
+	.intro--container__content{
+		padding-top: 20px;
+		margin-top: 20px;
+	}
+
+	.imageContainer{
+		height: 400px;
 
 		.leftImage{
-			background-size: cover;
-			height: 100%;
-			width: 49%;
-			float: left;
+			display: block;
+			float: none;
+			width: 100%;
+			height: 200px;
+			margin-bottom: 10px;
 		}
 
 		.rightImage{
-			background-size: cover;
-			height: 100%;
-			width: 49%;
-			float: right;
+			display: block;
+			float: none;
+			width: 100%;
+			height: 200px;
+
 		}
 	}
+
+	.stopthejump{
+		height: 0px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
