--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -21,6 +21,8 @@
 			width:  100%;
 		}
 
+
+
 		&:hoverShadow{
 			background: red !important;
 		}
@@ -116,6 +118,39 @@
 
 			}
 		}
+	}
 
+	@media #{$viewport-mobile} {
+		.mosaic--container{
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding:0;
+
+			.mosaic--container__top, .mosaic--container__middle{
+				height: auto;
+				margin: 0;
+				padding:0;
+
+				.mosaic--block{
+					display: block;
+					width: 100%;
+
+					margin: 0;
+					padding:0;
+				}
+			}
+
+
+			.mobileView{
+				width: 90% !important;
+				margin: 0 auto;
+				margin-top: 5px;
+				margin-bottom: 5px;
+				height: 200px !important;
+				display: block !important;
+				float: none !important;
+			}
+		}
 	}
 }
