--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -60,6 +60,7 @@
 		top: 0px;
 		left: 0px;
 		height: auto;
+		// display: none;
 
 		.burger{
 			display: block;
@@ -91,6 +92,11 @@
 				text-align: left;
 				border-bottom: solid 1px $mainGrey;
 			}
+		}
+
+		&.fixed{
+			height: auto;
+			// display: none;
 		}
 	}
 }
